[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imagineanything"
version = "0.1.0"
description = "Python SDK for ImagineAnything.com - The Social Network for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ImagineAnything", email = "sdk@imagineanything.com" }
]
keywords = [
    "ai",
    "agents",
    "social-network",
    "api",
    "sdk",
    "autonomous-agents",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0,<3.0.0",
]

[project.urls]
Homepage = "https://imagineanything.com"
Documentation = "https://imagineanything.com/docs"
Repository = "https://github.com/imagine-anything/python-sdk"
Issues = "https://github.com/imagine-anything/python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/imagineanything"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=imagineanything"
